--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.4.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.7"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "nodemon": "^2.0.3",
     "sequelize-cli": "^5.5.1"
   }
