--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.4.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.26.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
